feat: prompt input UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,26 +3,52 @@
 @tailwind utilities;
 
 :root {
-    --background-color: #ffffff;
-    /* --text-color: #2E2E2E; */
+  --background-color: #ffffff;
+  /* --text-color: #2E2E2E; */
 }
 
 @media (prefers-color-scheme: dark) {
-    :root {
-        --background-color: #131619;
-        /* --text-color: #f5f5f5; */
-    }
+  :root {
+    --background-color: #131619;
+    /* --text-color: #f5f5f5; */
+  }
 }
 
 body {
-    background-color: var(--background-color);
-    /* color: var(--text-color); */
+  background-color: var(--background-color);
+  /* color: var(--text-color); */
 }
 
 .text-gradient {
-    background: linear-gradient(45deg, #82dbf7 0%, #b6f09c 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
+  background: linear-gradient(45deg, #82dbf7 0%, #b6f09c 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:active {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.custom-scrollbar::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
